erDiagram
    TASKS ||--o{ SUBPROJECTS : "has many"
    TASKS ||--o{ STRUCTURAL_ELEMENTS : "contains"
    TASKS ||--o{ USERS : "assigned to"
    SUBPROJECTS ||--o{ STRUCTURAL_ELEMENTS : "contains"
    STRUCTURAL_ELEMENTS ||--o{ JOBS : "has"
    JOBS }o--|| USERS : "assigned to"
    USERS ||--o{ UPLOAD_SESSIONS : "creates"
    
    TASKS {
        ObjectId _id PK
        string title "Project Name"
        string location "Site Location"
        string status
        array assignedEngineers FK
        object cachedProgress
        datetime createdAt
    }
    
    SUBPROJECTS {
        ObjectId _id PK
        ObjectId project FK
        string name
        string code
        object statistics
        datetime createdAt
    }
    
    STRUCTURAL_ELEMENTS {
        ObjectId _id PK
        ObjectId project FK
        ObjectId subProject FK
        string serialNo
        string projectName
        string siteLocation
        string memberType
        number surfaceAreaSqm
        string status
    }
    
    JOBS {
        ObjectId _id PK
        ObjectId structuralElement FK
        string jobType
        string status
        ObjectId assignedTo FK
        datetime completedDate
    }
    
    USERS {
        ObjectId _id PK
        string name
        string email
        string role
        string password
    }
    
    UPLOAD_SESSIONS {
        ObjectId _id PK
        ObjectId userId FK
        string filename
        string status
        number totalRows
        number processedRows
    }
